--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="blog.css"
 </head>
 <body>
+    <div>
+        <h3>my first website</h3>
+        <p> my name is akhi.i am a student .my university name 
+            port city international university my department 
+            computer science engineering</p>
+    </div>
     
 </body>
 </html>
